--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcc 'PK'
 - !lcsh 'Bengali poetry -- Translations into German'
 - !lcsh 'Indic poetry -- Translations into German'
+- GITenberg
 title: Der zunehmende Mond
 url: http://www.gutenberg.org/ebooks/38125
